# wcdma-soft

./: Makefile  README.md  pyproject.toml  setup.cfg
tests/: __init__.py
wcdma_soft/: __init__.py
wcdma_soft/scripts/: __init__.py
