[tool.poetry]
name = "wcdma-soft"
version = "0.1.0"
description = "Parse soft versions for WCDMA BTS configured on Ericsson OSS"
authors = ["Ramil Albakov <ralbakov10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
